added hyperlink url

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <h1>Discover hidden places in the world around you</h1>
             <p>
-                <a class="download-link">Download Excursion (Coming soon!)</a>
+                <a href="excursion.com" class="download-link">Download Excursion (Coming soon!)</a>
             </p>
         </header>
 
