added main element and added video embed to it

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                 <a href="excursion.com" class="download-link">Download Excursion (Coming soon!)</a>
             </p>
         </header>
+        <main>
+            <video autoplay>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+
+            </video>
+        </main>
 
 
     </body>
