--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
         <main>
             <video autoplay>
                 <source src="resources/videos/excursion.mp4" type="video/mp4">
-
             </video>
+            <section class="product-description">
+                <h2>Your personal travel guide</h2>
+                <p>
+                    Excursion remembers places you like, and recommends new points of interest around you.
+                </p>
+                <img src="resources/images/camp.jpg">
+            </section>
+            <section class="release-date">
+
+            </section>
         </main>
 
 
