--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
         </header>
         <main>
-            <video autoplay>
+            <video autoplay loop>
                 <source src="resources/videos/excursion.mp4" type="video/mp4">
             </video>
             <section class="product-description">
