added release-date section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
                 <img src="resources/images/camp.jpg">
             </section>
             <section class="release-date">
-
+                <p>
+                    <img src="resources/images/phone.webp">
+                </p>
+                <h2>Coming soon for iPhone and Android</h2>
+                <p>
+                    <a href="excursion.com" class="download-link">Download Excursion (Coming soon!)</a>
+                </p>
             </section>
         </main>
 
