--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                     <a href="excursion.com" class="download-link">Download Excursion (Coming soon!)</a>
                 </p>
             </section>
+            <footer>
+                <p class="copyright">© Excursion</p>
+            </footer>
         </main>
 
 
